# DigitalTwinTD1

./: .gitignore  ACHIEVEMENT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  PROJECT_AUDIT_REPORT.md  README.md  SAFETY_AUDIT_CHECKLIST.md  TECHNICAL_SPECIFICATION.md  __init__.py  docker-compose.yml  issues.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  run_all_tests_perfect.py  setup.py  showcase_demo.py  test_model_registry.py
.github/workflows/: ci.yml  quality.yml
agent/: __init__.py  agent.py  encoder.py  memory_store.py
agents/: __init__.py  base.py  sb3_wrappers.py
core/: __init__.py  model_registry.py  twin.py
data/: __init__.py  loaders.py  preprocess.py
docs/: conf.py  contributing.rst  datasets.rst  examples.rst  index.rst  installation.rst  quickstart.rst
docs/api/: core.rst  models.rst  sdk.rst  utils.rst
docs/core/: model_registry.md
examples/: advanced_showcase.py  agents_showcase.py  api_client_example.py  complete_showcase.py  dataset_example.py  quick_start.py  quickstart_example.py  sdk_showcase.py
intelligence/: real_time.py
models/: __init__.py  advanced.py  baseline.py  ensemble_model.py  lstm.py  lstm_model.py  mamba_model.py  mechanistic.py  transformer.py  transformer_model.py
optimization/: personalized_engine.py
requirements/: base.in  base.txt  cognitive.in  cognitive.txt  dev.in  dev.txt  heavy.in  heavy.txt
sdk/: __init__.py  api.py  clinical.py  clinical_backup.py  core.py  dashboard.py  datasets.py  demo_mode.py  device_simulator.py  integrations.py  model_zoo.py  performance.py  plugins.py
tests/: 2️⃣ PerfectTestLogs.txt  TESTING_EVIDENCE.md  perfect_test_results.json  test_agent.py  test_agent_encoder.py  test_agent_memory_store.py  test_sdk_comprehensive.py  test_sdk_contextual_predict.py
tests/integration/: test_sdk_integration.py
utils/: __init__.py  data_processing.py  evaluation.py  metrics.py  visualization.py
